--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,22 @@ h3 {
 	margin-bottom: 30px;
 }
 
+#download-button {
+	position: relative;
+	top: 1px;
+	height: 51px;
+	margin-top: -1px;
+	background-color: #5CB85C;
+}
+#download-button * {
+	color: #FFF !important;
+}
+#download-button:hover,
+#download-button:focus,
+#download-button:active {
+	background-color: #398439;
+}
+
 #to-github {
 	float: right;
 }
