--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 h1 {
 	color: #666666;
+	margin-bottom: 30px;
+	margin-top: 30px;
 }
 
 h2, h4 {
@@ -9,6 +11,29 @@ h2, h4 {
 h3 {
 	color: #FF6400;
 	margin-top: 10px;
+}
+
+.btn {
+	border-radius: 0px;
+	border: none;
+}
+.btn-default {
+	background-color: #EEE;
+}
+.btn-default:hover {
+	background-color: #CCC;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	color: #999;
+}
+
+.navbar-inverse .navbar-brand {
+	color: #FFF;
+}
+
+.navbar-inverse .navbar-brand:hover {
+	color: #CCC;
 }
 
 #container {
@@ -23,15 +48,50 @@ h3 {
 	margin-bottom: 20px;
 }
 
-#fixed-box {
-	position: fixed;
-	margin-top: 24px;
-	min-height: 100%;
+.tooltip {
+	width: 140px;
+	opacity: 0.7 !important;
 }
 
-#get-spawnkill,
-#to-github {
-	margin-bottom: 30px;
+.tooltip-inner {
+	border-radius: 0px;
+}
+
+#logo {
+	position: relative;
+	top: -9px;
+	vertical-align: top;
+	margin-right: 12px;
+}
+
+#download-arrow {
+	position: fixed;
+	right: 100px;
+	top: 60px;
+	z-index: 10;
+}
+
+#developper-gears {
+	position: absolute;
+	top: 247px;
+	z-index: 10;
+}
+
+#developper-button {
+	position: absolute;
+	top: 438px;
+	z-index: 10;
+	left: 300px;
+	border: solid 1px #CCC;
+}
+
+#developper-button:hover {
+	background-color: #DDD;
+}
+
+#fixed-box {
+	position: fixed;
+	min-height: 100%;
 }
 
 #download-button {
@@ -41,36 +101,48 @@ h3 {
 	margin-top: -1px;
 	background-color: #5CB85C;
 }
-#download-button * {
+#download-button a {
+	font-size: 1.1em;
+	line-height: 0.8;
 	color: #FFF !important;
 }
 #download-button:hover,
 #download-button:focus,
 #download-button:active {
-	background-color: #398439;
+	background-color: #76C176;
 }
 
-#to-github {
-	float: right;
+#download-box img.screen {
+	/*display: none;*/
+}
+
+.help {
+	display: none;
+	cursor: pointer;
 }
 
 #sondage iframe {
 	width: 100%;
-	height: 500px;
+	height: 1000px;
 	border: solid 1px #CCC;
 	border-radius: 5px;
 }
 
+#bug {
+	margin-left: 40px;
+}
+
 .feature {
-	padding: 10px;
-	margin-bottom: 30px;
-	border-radius: 5px;
-	border: 1px solid #EEE;
-	background-color: #F5F5F5;
+	border-radius: 0px;
 }
 
 .feature-img {
 	display: inline-block;
+	box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.5);
+}
+
+.feature img {
+	padding: 5px;
 }
 
 .icon-browser {
@@ -105,9 +177,17 @@ h3 {
 		max-width: 100%;
 	}
 
-	.tooltip {
-		/*left: 80% !important;*/
-		/*display: none !important;*/
+	#download-arrow {
+		width: 300px;
+	}
+
+	#developper-gears {
+		width: 320px;
+	}
+
+	#developper-button {
+		top: 388px;
+		left: 200px;
 	}
 }
 
@@ -115,11 +195,31 @@ h3 {
 	.feature img {
 		max-width: 100%;
 	}
-	.tooltip {
-		/*display: none !important;*/
+
+	#download-arrow,
+	#developper-gears {
+		display: none;
+	}
+
+	#developper-button {
+		top: 75px;
+		right: 50px;
+		left: auto;
+	}
+
+	#download-button .spawnkill-label {
+		display: none;
+	}
+
+	#bug {
+		margin-left: 10px;
 	}
 
 	#fixed-box {
 		position: static;
-	}	
+	}
+
+	.tooltip {
+		display: none !important;
+	}
 }
