--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,15 @@ h3 {
 	margin-left: 10px;
 }
 
+.donation-download-button {
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
+	background-color: #F70;
+	font-size: 1.1em;
+}
+
 
 
 @media (max-width: 1200px) {
