--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ h3 {
 	bottom: 20px;
 	right: 30px;
 	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
-	background-color: #F70;
+	background-color: #FF6400;
 	font-size: 1.1em;
 }
 
