Masque les images d'aide dans la boîte de téléchargement
La popup d'aide à l'installation du script n'était pas assez claire
avec tous les screenshots d'aide. Maintenant les images d'affichent
seulement si l'utilisateur les demande en cliquant sur le bouton d'aide.

- Remplacement de l'image d'aide

- Ajout du hash "#download" en plus de "#download-box" pour le lien de
  téléchargement

--- a/css/style.css
+++ b/css/style.css
@@ -113,12 +113,13 @@ h3 {
 }
 
 #download-box img.screen {
-	/*display: none;*/
+	display: none;
 }
 
 .help {
-	display: none;
+	vertical-align: middle;
 	cursor: pointer;
+	margin-left: 5px;
 }
 
 #sondage iframe {
