--- a/css/style.css
+++ b/css/style.css
@@ -151,10 +151,12 @@ h3 {
 
 .feature-img {
 	display: inline-block;
+	max-width: 100%;
 	box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
 .feature img {
+	max-width: 100%;
 	padding: 5px;
 }
 
